UPDATED index.html, style.css to correct overflow error with main container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,7 @@
   border-radius: 5px;
   border-color: yellow;
   padding: 20px 20px 20px 20px;
+ 
   
 }
 
@@ -81,6 +82,12 @@
   background-color: rgba(103, 68, 44, 0.7);
   /*opacity: 0.7;*/
   color: white;
+  
+}
+
+.scroll-section {
+  
+  overflow: scroll;
 }
 
 .main-title {
